bundled_metadata/force-app/main/default/objects/Activity/fields/Account_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_SF_Id__c</fullName>
    <formula>IF( ISNULL( AccountId__c ), &apos;&apos; , AccountId__r.Id)</formula>
    <label>Account SF Id</label>
    <type>Text</type>
</CustomField>