bundled_metadata/force-app/main/default/objects/Activity/fields/EUSFA_Development_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Development_Task_Type__c</fullName>
    <label>Development Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>G16_LV_S</fullName>
                <label>PepsiCo Exclusivity</label>
            </value>
            <value>
                <fullName>O11_LV_S</fullName>
                <label>Visibility: Branded POS</label>
            </value>
            <value>
                <fullName>O12_LV_S</fullName>
                <label>Value: Combo Execution / Mixology</label>
            </value>
            <value>
                <fullName>P53_LV_S_F</fullName>
                <label>Main Space Compliance Foods</label>
            </value>
            <value>
                <fullName>O03_LV_S</fullName>
                <label>Variety: Menu Visibility</label>
            </value>
            <value>
                <fullName>O10_LV_S</fullName>
                <label>Products on Digital Platform</label>
            </value>
            <value>
                <fullName>P53_LV_S_B</fullName>
                <label>Main Space Compliance Beverages</label>
            </value>
            <value>
                <fullName>P2_LV_S_F</fullName>
                <label>MSL Distribution Foods (audit)</label>
            </value>
            <value>
                <fullName>P2_LV_S_B</fullName>
                <label>MSL Distribution Beverages (audit)</label>
            </value>
            <value>
                <fullName>P30_LV_S_F</fullName>
                <label>Main Space Share Foods</label>
            </value>
            <value>
                <fullName>P30_LV_S_B</fullName>
                <label>Main Space Share Beverages</label>
            </value>
            <value>
                <fullName>P54_LV_S_F</fullName>
                <label>Main Space Compliance - Foods Category</label>
            </value>
            <value>
                <fullName>P54_LV_S_B</fullName>
                <label>Main Space Compliance - Beverages Category</label>
            </value>
            <value>
                <fullName>P56_LV_S_F</fullName>
                <label>Secondary Space Compliance Foods</label>
            </value>
            <value>
                <fullName>P56_LV_S_B</fullName>
                <label>Secondary Space Compliance Beverages</label>
            </value>
            <value>
                <fullName>P41_LV_S</fullName>
                <label>Number of Displays</label>
            </value>
            <value>
                <fullName>P42_LV_S</fullName>
                <label>Number of Coolers</label>
            </value>
            <value>
                <fullName>P3_LV_S</fullName>
                <label>CDA Distribution</label>
            </value>
            <value>
                <fullName>G20_L4W_S</fullName>
                <label>Frequent Digital Buyer</label>
            </value>
            <value>
                <fullName>P32_LV_S_F</fullName>
                <label>Total Space Share Foods</label>
            </value>
            <value>
                <fullName>P32_LV_S_B</fullName>
                <label>Total Space Share Beverages</label>
            </value>
            <value>
                <fullName>P2_L12W_S_F</fullName>
                <label>MSL Distribution Foods (Sales)</label>
            </value>
            <value>
                <fullName>P2_L12W_S_B</fullName>
                <label>MSL Distribution Beverages (Sales)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>