bundled_metadata/force-app/main/default/objects/Activity/fields/EUSFA_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G_06 – Competitor Products in Store</fullName>
            </value>
            <value>
                <fullName>P_01 / P_02 – Number of Displays</fullName>
            </value>
            <value>
                <fullName>P_03 – Missing MSL Distributed</fullName>
            </value>
            <value>
                <fullName>P_05 – Missing MSL Available</fullName>
            </value>
            <value>
                <fullName>P_06 – Branded POS</fullName>
            </value>
            <value>
                <fullName>P_07 – Combo Execution</fullName>
            </value>
            <value>
                <fullName>P_08 – Cooler Removal</fullName>
            </value>
            <value>
                <fullName>P_09 – Make Profitable Cooler</fullName>
            </value>
            <value>
                <fullName>P_10 / P_11 – Main PoG Compliance</fullName>
            </value>
            <value>
                <fullName>P_12 / P_14 – Main Space Share</fullName>
            </value>
            <value>
                <fullName>P_15 – Menu Visibility</fullName>
            </value>
            <value>
                <fullName>P_16 – Digital Platform Visibility</fullName>
            </value>
            <value>
                <fullName>P_21 / P_22 – Secondary Space Compliance</fullName>
            </value>
            <value>
                <fullName>G_07 – Competitor Products in Cooler</fullName>
            </value>
            <value>
                <fullName>P_36 – Secondary Space Compliance – Segment</fullName>
            </value>
            <value>
                <fullName>P_13 – Main Space Share – Segment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>