bundled_metadata/force-app/main/default/objects/Activity/fields/EUSFA_Rejection_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Rejection_Reason_Description__c</fullName>
    <label>Rejection Reason Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EUSFA_Rejection_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store refused to remove competitor products</fullName>
            </value>
            <value>
                <fullName>Contract exclusivity not applicable</fullName>
            </value>
            <value>
                <fullName>Store under renovation / unavailable</fullName>
            </value>
            <value>
                <fullName>Cooler shared with other brands by store decision</fullName>
            </value>
            <value>
                <fullName>Cooler not accessible during visit</fullName>
            </value>
            <value>
                <fullName>Competitor products removed before check</fullName>
            </value>
            <value>
                <fullName>No available space for new display</fullName>
            </value>
            <value>
                <fullName>Store rejected installation</fullName>
            </value>
            <value>
                <fullName>Equipment pending delivery</fullName>
            </value>
            <value>
                <fullName>Out of stock at wholesaler</fullName>
            </value>
            <value>
                <fullName>SKU discontinued or replaced</fullName>
            </value>
            <value>
                <fullName>Customer refused product</fullName>
            </value>
            <value>
                <fullName>Product not supplied in recent deliveries</fullName>
            </value>
            <value>
                <fullName>Cooler/display full – no capacity</fullName>
            </value>
            <value>
                <fullName>Low rotation – product removed</fullName>
            </value>
            <value>
                <fullName>No POS materials available</fullName>
            </value>
            <value>
                <fullName>Store declined branding</fullName>
            </value>
            <value>
                <fullName>POS damaged / waiting replacement</fullName>
            </value>
            <value>
                <fullName>Menu update pending approval</fullName>
            </value>
            <value>
                <fullName>Customer refused combo inclusion</fullName>
            </value>
            <value>
                <fullName>Menu printing scheduled for next cycle</fullName>
            </value>
            <value>
                <fullName>Cooler recently repaired / replaced</fullName>
            </value>
            <value>
                <fullName>Store requested to keep cooler temporarily</fullName>
            </value>
            <value>
                <fullName>Pending logistics pickup</fullName>
            </value>
            <value>
                <fullName>Sales impacted by low footfall</fullName>
            </value>
            <value>
                <fullName>Cooler under maintenance</fullName>
            </value>
            <value>
                <fullName>Seasonal demand drop</fullName>
            </value>
            <value>
                <fullName>Shelf shared with competitors per store policy</fullName>
            </value>
            <value>
                <fullName>Layout recently changed by store</fullName>
            </value>
            <value>
                <fullName>Out of stock – cannot comply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>