bundled_metadata/force-app/main/default/objects/Activity/fields/Missing_Item_KPI__c.field-meta.xml
<CustomField>
    <fullName>Missing_Item_KPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Item KPI</label>
    <type>Checkbox</type>
</CustomField>