bundled_metadata/force-app/main/default/objects/Activity/fields/Picos_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Picos_Oppty__c</fullName>
    <label>Picos Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>