bundled_metadata/force-app/main/default/objects/Activity/fields/PICOS_Points__c.field-meta.xml
<CustomField>
    <fullName>PICOS_Points__c</fullName>
    <label>PICOS Points</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>