bundled_metadata/force-app/main/default/objects/Activity/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cancel_Reason_Lists</valueSetName>
    </valueSet>
</CustomField>